// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-113p9sf,
[data-css-113p9sf] {
  position: relative;
  transform: translateY(-25);
  -webkit-transform: translateY(-25);
}

.css-113p9sf> div:nth-child(0),
[data-css-113p9sf]> div:nth-child(0) {
  animation-delay: -0.80s;
  -webkit-animation-delay: -0.80s;
}

.css-113p9sf> div:nth-child(1),
[data-css-113p9sf]> div:nth-child(1) {
  animation-delay: -0.60s;
  -webkit-animation-delay: -0.60s;
}

.css-113p9sf> div:nth-child(2),
[data-css-113p9sf]> div:nth-child(2) {
  animation-delay: -0.40s;
  -webkit-animation-delay: -0.40s;
}

.css-113p9sf> div:nth-child(3),
[data-css-113p9sf]> div:nth-child(3) {
  animation-delay: -0.20s;
  -webkit-animation-delay: -0.20s;
}

.css-113p9sf > div,
[data-css-113p9sf] > div {
  animation-fill-mode: both;
  animation: animation_1po4xu4 1.25s 0s infinite cubic-bezier(.21,.53,.56,.8);
  border: 2px solid #ffffff;
  border-radius: 100%;
  height: 50px;
  left: -26px;
  position: absolute;
  top: -2px;
  width: 50px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1po4xu4 1.25s 0s infinite cubic-bezier(.21,.53,.56,.8);
}

<BallScaleRippleMultiple
  loading={true}
>
  <div
    data-css-113p9sf=""
  >
    <div />
    <div />
    <div />
  </div>
</BallScaleRippleMultiple>
`;

exports[`enzyme.render 1`] = `
.css-113p9sf,
[data-css-113p9sf] {
  position: relative;
  transform: translateY(-25);
  -webkit-transform: translateY(-25);
}

.css-113p9sf> div:nth-child(0),
[data-css-113p9sf]> div:nth-child(0) {
  animation-delay: -0.80s;
  -webkit-animation-delay: -0.80s;
}

.css-113p9sf> div:nth-child(1),
[data-css-113p9sf]> div:nth-child(1) {
  animation-delay: -0.60s;
  -webkit-animation-delay: -0.60s;
}

.css-113p9sf> div:nth-child(2),
[data-css-113p9sf]> div:nth-child(2) {
  animation-delay: -0.40s;
  -webkit-animation-delay: -0.40s;
}

.css-113p9sf> div:nth-child(3),
[data-css-113p9sf]> div:nth-child(3) {
  animation-delay: -0.20s;
  -webkit-animation-delay: -0.20s;
}

.css-113p9sf > div,
[data-css-113p9sf] > div {
  animation-fill-mode: both;
  animation: animation_1po4xu4 1.25s 0s infinite cubic-bezier(.21,.53,.56,.8);
  border: 2px solid #ffffff;
  border-radius: 100%;
  height: 50px;
  left: -26px;
  position: absolute;
  top: -2px;
  width: 50px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1po4xu4 1.25s 0s infinite cubic-bezier(.21,.53,.56,.8);
}

<div
  data-css-113p9sf=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-113p9sf,
[data-css-113p9sf] {
  position: relative;
  transform: translateY(-25);
  -webkit-transform: translateY(-25);
}

.css-113p9sf> div:nth-child(0),
[data-css-113p9sf]> div:nth-child(0) {
  animation-delay: -0.80s;
  -webkit-animation-delay: -0.80s;
}

.css-113p9sf> div:nth-child(1),
[data-css-113p9sf]> div:nth-child(1) {
  animation-delay: -0.60s;
  -webkit-animation-delay: -0.60s;
}

.css-113p9sf> div:nth-child(2),
[data-css-113p9sf]> div:nth-child(2) {
  animation-delay: -0.40s;
  -webkit-animation-delay: -0.40s;
}

.css-113p9sf> div:nth-child(3),
[data-css-113p9sf]> div:nth-child(3) {
  animation-delay: -0.20s;
  -webkit-animation-delay: -0.20s;
}

.css-113p9sf > div,
[data-css-113p9sf] > div {
  animation-fill-mode: both;
  animation: animation_1po4xu4 1.25s 0s infinite cubic-bezier(.21,.53,.56,.8);
  border: 2px solid #ffffff;
  border-radius: 100%;
  height: 50px;
  left: -26px;
  position: absolute;
  top: -2px;
  width: 50px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1po4xu4 1.25s 0s infinite cubic-bezier(.21,.53,.56,.8);
}

<div
  data-css-113p9sf=""
>
  <div />
  <div />
  <div />
</div>
`;
